make second view and add constraints manually

--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -22,18 +22,18 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2y-qO-JBo">
-                                <rect key="frame" x="53" y="134" width="214.5" height="59"/>
+                                <rect key="frame" x="52.5" y="134" width="215" height="59"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="214.5" id="TL6-To-Q48"/>
+                                    <constraint firstAttribute="width" constant="215" id="7v2-Ew-yqx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="43"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGa-T1-Ij9">
-                                <rect key="frame" x="52.5" y="193" width="215.5" height="30.5"/>
+                                <rect key="frame" x="50" y="193" width="220" height="30.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="215.5" id="WZP-sm-6Dd"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="220" id="v6R-d4-odJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="22"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -54,9 +54,9 @@
                                 <rect key="frame" x="100.5" y="20" width="119" height="20"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find a team in your city and dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYv-76-zKk">
-                                <rect key="frame" x="49" y="319.5" width="222" height="38.5"/>
+                                <rect key="frame" x="52.5" y="319.5" width="215" height="38.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="222" id="KkV-Bw-o2H"/>
+                                    <constraint firstAttribute="width" constant="215" id="KkV-Bw-o2H"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -92,8 +92,99 @@
             </objects>
             <point key="canvasLocation" x="133.125" y="133.09859154929578"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="PbL-JK-NKe">
+            <objects>
+                <viewController id="IXc-ip-IzF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6nq-te-QtY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="Jng-rB-005">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="oTg-UU-KKY">
+                                <rect key="frame" x="100.5" y="20" width="119" height="20"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bx9-JQ-EkQ" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
+                                <rect key="frame" x="16" y="163" width="288" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="Men">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JjY-NB-z55" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
+                                <rect key="frame" x="16" y="210" width="288" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="Women">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNY-vz-XFG" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
+                                <rect key="frame" x="16" y="257" width="288" height="36"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="Co-ed">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53t-gK-L8Y" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
+                                <rect key="frame" x="16" y="513.5" width="288" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="RPU-Ok-pmS"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desired League:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSm-Xx-VSX">
+                                <rect key="frame" x="97" y="128" width="126" height="24"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="JjY-NB-z55" firstAttribute="top" secondItem="Bx9-JQ-EkQ" secondAttribute="bottom" constant="11" id="0PT-xf-mEx"/>
+                            <constraint firstItem="f2u-vS-1iI" firstAttribute="trailing" secondItem="Bx9-JQ-EkQ" secondAttribute="trailing" constant="16" id="9ra-VM-O5x"/>
+                            <constraint firstItem="HSm-Xx-VSX" firstAttribute="centerX" secondItem="6nq-te-QtY" secondAttribute="centerX" id="AV7-mk-4ye"/>
+                            <constraint firstItem="f2u-vS-1iI" firstAttribute="trailing" secondItem="HNY-vz-XFG" secondAttribute="trailing" constant="16" id="F6Z-97-bN3"/>
+                            <constraint firstItem="Jng-rB-005" firstAttribute="leading" secondItem="f2u-vS-1iI" secondAttribute="leading" id="FTg-Tw-vef"/>
+                            <constraint firstItem="f2u-vS-1iI" firstAttribute="trailing" secondItem="53t-gK-L8Y" secondAttribute="trailing" constant="16" id="G30-mY-TxX"/>
+                            <constraint firstItem="JjY-NB-z55" firstAttribute="top" secondItem="Bx9-JQ-EkQ" secondAttribute="bottom" constant="11" id="GUG-8U-EI2"/>
+                            <constraint firstItem="f2u-vS-1iI" firstAttribute="trailing" secondItem="JjY-NB-z55" secondAttribute="trailing" constant="16" id="GUv-9K-cHU"/>
+                            <constraint firstItem="HNY-vz-XFG" firstAttribute="leading" secondItem="f2u-vS-1iI" secondAttribute="leading" constant="16" id="HXF-WQ-xwa"/>
+                            <constraint firstItem="Bx9-JQ-EkQ" firstAttribute="top" secondItem="HSm-Xx-VSX" secondAttribute="bottom" constant="11" id="Iel-Hb-W09"/>
+                            <constraint firstItem="53t-gK-L8Y" firstAttribute="top" secondItem="HNY-vz-XFG" secondAttribute="bottom" constant="220.5" id="LV1-FT-nO7"/>
+                            <constraint firstItem="53t-gK-L8Y" firstAttribute="leading" secondItem="f2u-vS-1iI" secondAttribute="leading" constant="16" id="OCU-YV-5tH"/>
+                            <constraint firstItem="JjY-NB-z55" firstAttribute="leading" secondItem="f2u-vS-1iI" secondAttribute="leading" constant="16" id="RIf-MD-Tr9"/>
+                            <constraint firstItem="Jng-rB-005" firstAttribute="trailing" secondItem="f2u-vS-1iI" secondAttribute="trailing" id="Sbl-Be-VbJ"/>
+                            <constraint firstItem="oTg-UU-KKY" firstAttribute="centerX" secondItem="6nq-te-QtY" secondAttribute="centerX" id="Vq7-bm-t9u"/>
+                            <constraint firstItem="Bx9-JQ-EkQ" firstAttribute="top" secondItem="HSm-Xx-VSX" secondAttribute="bottom" constant="11" id="Zrn-Ff-Epk"/>
+                            <constraint firstItem="HNY-vz-XFG" firstAttribute="top" secondItem="JjY-NB-z55" secondAttribute="bottom" constant="11" id="hmK-Jb-sot"/>
+                            <constraint firstItem="f2u-vS-1iI" firstAttribute="bottom" secondItem="53t-gK-L8Y" secondAttribute="bottom" constant="24.5" id="jHN-hz-J0u"/>
+                            <constraint firstItem="Jng-rB-005" firstAttribute="top" secondItem="6nq-te-QtY" secondAttribute="top" id="jLb-nb-6St"/>
+                            <constraint firstItem="HSm-Xx-VSX" firstAttribute="top" secondItem="oTg-UU-KKY" secondAttribute="bottom" constant="88" id="kez-hg-qbF"/>
+                            <constraint firstItem="oTg-UU-KKY" firstAttribute="top" secondItem="f2u-vS-1iI" secondAttribute="top" id="kim-3d-16c"/>
+                            <constraint firstItem="Bx9-JQ-EkQ" firstAttribute="leading" secondItem="f2u-vS-1iI" secondAttribute="leading" constant="16" id="lul-if-tpt"/>
+                            <constraint firstItem="HSm-Xx-VSX" firstAttribute="top" secondItem="oTg-UU-KKY" secondAttribute="bottom" constant="88" id="qt2-wf-mYh"/>
+                            <constraint firstItem="HNY-vz-XFG" firstAttribute="top" secondItem="JjY-NB-z55" secondAttribute="bottom" constant="11" id="twB-3W-dFQ"/>
+                            <constraint firstItem="Jng-rB-005" firstAttribute="bottom" secondItem="f2u-vS-1iI" secondAttribute="bottom" id="vr2-TO-pnl"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="f2u-vS-1iI"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kCc-w5-92l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1014" y="133"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
         <image name="welcomeScreenBG" width="414" height="736"/>
     </resources>
