--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -49,6 +49,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="IXc-ip-IzF" kind="show" id="yK8-sH-GXp"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="0yh-KH-ZnY">
                                 <rect key="frame" x="100.5" y="20" width="119" height="20"/>
@@ -83,10 +86,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="bgImg" destination="XOD-3C-vE5" id="lJC-bw-ZCa"/>
-                        <outlet property="swoosh" destination="0yh-KH-ZnY" id="r8X-jY-0VA"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -156,10 +155,25 @@
                                 <state key="normal" title="Next">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="AjD-u8-A5G" kind="show" id="CN9-zf-MN3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kOL-eT-pIB">
+                                <rect key="frame" x="16" y="20" width="29" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="0gr-R9-QN7"/>
+                                    <constraint firstAttribute="width" constant="29" id="dIE-Rx-tC6"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="0m8-Td-yPc" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="Kec-Yt-0Xm"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="kOL-eT-pIB" firstAttribute="top" secondItem="6nq-te-QtY" secondAttribute="top" constant="20" id="3BP-Tt-kq4"/>
                             <constraint firstItem="f2u-vS-1iI" firstAttribute="trailing" secondItem="b9N-bD-Shh" secondAttribute="trailing" constant="16" id="5xZ-Cq-2Gx"/>
                             <constraint firstItem="b9N-bD-Shh" firstAttribute="top" secondItem="f2u-vS-1iI" secondAttribute="top" constant="143" id="BFM-w2-7L2"/>
                             <constraint firstItem="f2u-vS-1iI" firstAttribute="trailing" secondItem="53t-gK-L8Y" secondAttribute="trailing" constant="16" id="G30-mY-TxX"/>
@@ -170,6 +184,7 @@
                             <constraint firstItem="Jng-rB-005" firstAttribute="trailing" secondItem="f2u-vS-1iI" secondAttribute="trailing" id="WgY-80-hdh"/>
                             <constraint firstItem="b9N-bD-Shh" firstAttribute="centerX" secondItem="6nq-te-QtY" secondAttribute="centerX" id="hKT-Vx-1CA"/>
                             <constraint firstItem="f2u-vS-1iI" firstAttribute="bottom" secondItem="53t-gK-L8Y" secondAttribute="bottom" constant="24.5" id="jHN-hz-J0u"/>
+                            <constraint firstItem="kOL-eT-pIB" firstAttribute="leading" secondItem="f2u-vS-1iI" secondAttribute="leading" constant="16" id="ki1-qQ-oGb"/>
                             <constraint firstItem="Jng-rB-005" firstAttribute="bottom" secondItem="f2u-vS-1iI" secondAttribute="bottom" id="pY6-Vq-mci"/>
                             <constraint firstItem="Jng-rB-005" firstAttribute="top" secondItem="6nq-te-QtY" secondAttribute="top" id="sEO-3t-FCc"/>
                             <constraint firstItem="fKF-7T-yNI" firstAttribute="centerX" secondItem="6nq-te-QtY" secondAttribute="centerX" id="vaS-Zl-d22"/>
@@ -179,6 +194,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kCc-w5-92l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="0m8-Td-yPc" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="949" y="133"/>
         </scene>
@@ -261,6 +277,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
