--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -154,7 +154,7 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53t-gK-L8Y" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53t-gK-L8Y" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
                                 <rect key="frame" x="16" y="513.5" width="288" height="30"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -176,7 +176,7 @@
                                 </constraints>
                                 <state key="normal" image="backButton"/>
                                 <connections>
-                                    <segue destination="0m8-Td-yPc" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="Kec-Yt-0Xm"/>
+                                    <segue destination="0m8-Td-yPc" kind="unwind" unwindAction="unwindFromLeagueVCWithUnwindSegue:" id="2vp-yG-eMF"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -265,9 +265,17 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKY-Zz-kZu">
+                                <rect key="frame" x="16" y="20" width="29" height="24"/>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="fcW-30-pVJ" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="i0h-wQ-mjU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="wKY-Zz-kZu" firstAttribute="top" secondItem="WY8-mG-glz" secondAttribute="top" id="8k6-kX-4mW"/>
                             <constraint firstItem="lva-kJ-7c1" firstAttribute="leading" secondItem="WY8-mG-glz" secondAttribute="leading" constant="16" id="FVV-aN-sUD"/>
                             <constraint firstItem="WY8-mG-glz" firstAttribute="bottom" secondItem="lva-kJ-7c1" secondAttribute="bottom" constant="20" id="Q0e-hZ-CDI"/>
                             <constraint firstItem="Ldv-rS-gii" firstAttribute="centerX" secondItem="w96-hP-pss" secondAttribute="centerX" id="QMA-F3-HCb"/>
@@ -279,12 +287,14 @@
                             <constraint firstItem="WY8-mG-glz" firstAttribute="trailing" secondItem="lva-kJ-7c1" secondAttribute="trailing" constant="16" id="rCB-5t-Kq9"/>
                             <constraint firstItem="WY8-mG-glz" firstAttribute="trailing" secondItem="1Om-Qa-HZX" secondAttribute="trailing" constant="16" id="u3x-vf-Hnp"/>
                             <constraint firstItem="doh-Di-lZK" firstAttribute="leading" secondItem="WY8-mG-glz" secondAttribute="leading" id="veb-Ch-rIR"/>
+                            <constraint firstItem="wKY-Zz-kZu" firstAttribute="leading" secondItem="WY8-mG-glz" secondAttribute="leading" constant="16" id="wHv-wd-Ff2"/>
                             <constraint firstItem="1Om-Qa-HZX" firstAttribute="top" secondItem="Ldv-rS-gii" secondAttribute="bottom" constant="74" id="wRs-rY-IhN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WY8-mG-glz"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Quq-Eg-pWf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="fcW-30-pVJ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1747.5" y="132.04225352112675"/>
         </scene>
